deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "${name}"
spec:
  replicas: 1
  template:
    spec:
      serviceAccountName: "${name}"
      securityContext:
        fsGroup: 2000
      containers:
      - name: main
        securityContext:
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 10000
        image: "appimage"
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 256m
            memory: 256Mi
          requests:
            cpu: 256m
            memory: 256Mi
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 9080
          name: metrics
        volumeMounts:
        - name: config
          mountPath: "/etc/${name}/config"
      volumes:
      - name: config
        secret:
          secretName: "config-${name}"
