deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "${name}"
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv6
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  - name: metrics
    port: 9080
    protocol: TCP
    targetPort: metrics
  type: ClusterIP
